--- a/BackEnd/src/main/resources/static/index.html
+++ b/BackEnd/src/main/resources/static/index.html
@@ -15,5 +15,5 @@
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-3GOTONHO.js" type="module"></script></body>
+<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-6SRE4UXP.js" type="module"></script></body>
 </html>
